--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,20 @@ q:before,q:after{content:'';}
 abbr,acronym{border:0;}
 i {font-style: normal;}
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for Firefox */
+* {
+    scrollbar-width: none;
+}
+
+/* Hide scrollbar for IE and Edge */
+* {
+    -ms-overflow-style: none;
+}
 
 /* begin */
 body { font-family:'微软雅黑','Microsoft Yahei','Arail'; font-size: 12px; color: #666; background-color: #f3f3f3; }
@@ -76,24 +90,6 @@ i { font-size: 16px; }
 
 .button_print { padding: 5px 7px; font-size: 12px; display: block; position: fixed; top: 10px; right: 10px; z-index: 99; }
 
-/* sound */
-.sound_area { width: 38px; height: 38px; position: fixed; top: 55px; right: 10px; z-index: 99; }
-.sound_area .sa_start { width: 36px; height: 36px; line-height: 36px; text-align: center; background-color: #fff; border: 1px #ccc solid; overflow: hidden; font-size: 16px; color: #109d59; animation:myloading 1s linear infinite; -moz-animation:myloading 1s linear infinite; -webkit-animation:myloading 1s linear infinite; -o-animation:myloading 1s linear infinite; cursor: pointer; }
-.sound_area .sa_start:hover { background-color: #f3f3f3; }
-.sound_area .sa_info { position: absolute; right: 30px; top: 0; background-color: #fff; border: 1px #ccc solid; box-shadow: 0 1px 3px rgba(0,0,0,0.2); -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.2); -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.2); padding: 5px; width: 190px; display: none; }
-.sound_area:hover .sa_info { display: block; }
-.sound_area .sa_info ul li,.sound_help ul li { list-style: none; line-height: 25px; }
-.sound_area .sa_info ul li i,.sound_help ul li i { float: left; margin-right: 5px; font-size: 16px; color: #aaa; }
-
-.sound_help { background-color: #fff; bottom: -360px; left: 50%; z-index: 9990; position: fixed; filter:alpha(opacity=0); -moz-opacity:0; opacity:0; display: none; }
-.sound_help h3 { font-size: 18px; color: #bbb; line-height: 25px; margin-bottom: 2%; }
-.sound_help h3 i { font-size: 20px; margin-right: 10px; float: left; }
-.close_help { width: 40px; height: 40px; line-height: 40px; text-align: center; position: absolute; right: 2%; top: 2%; font-size: 32px; color: #aaa; }
-
-.bye { width: 100%; height: 100%; position: fixed; background-color: #333; z-index: 9999; left: 0; top: 0;  display: none; filter:alpha(opacity=0); -moz-opacity:0; opacity:0; }
-.bye span { width: 100%; text-align: center; height: 50px; line-height: 50px; margin-top: -25px; top: 50%; left: 0; position: absolute; font-size: 32px; color: #999; }
-
-
 /* layout */
 .main { margin: 0 auto; background-color: #fff; }
 .content { width: 88%; padding: 6%; margin: 0; }
@@ -101,7 +97,7 @@ i { font-size: 16px; }
 .avatar { width: 152px; height: 152px; position: relative; }
 .avatar .avatar_pic { width: 150px; height: 150px; display: block; background: url(../images/avatar.png) no-repeat center center;  border: 1px #ccc solid; overflow: hidden; }
 .avatar:hover .avatar_pic { animation:myloading 1s linear infinite; -moz-animation:myloading 1s linear infinite; -webkit-animation:myloading 1s linear infinite; -o-animation:myloading 1s linear infinite; }
-.avatar .avatar_pic em { width: 130px; height: 130px; line-height: 130px; text-align: center; position: absolute; left: 1px; top: 1px; background-color: rgba(255,255,255,0.95); color: #999; font-size: 22px; filter:alpha(opacity=0); -moz-opacity:0; opacity:0; border: 10px #fff solid; }
+.avatar .avatar_pic em { width: 145px; height: 145px; line-height: 145px; text-align: center; position: absolute; left: 1px; top: 1px; background-color: rgba(255,255,255,0.95); color: #999; font-size: 16px; filter:alpha(opacity=0); -moz-opacity:0; opacity:0; border: 10px #fff solid; }
 .avatar:hover .avatar_pic em { filter:alpha(opacity=100); -moz-opacity:1; opacity:1; }
 .avatar:active .avatar_pic em { filter:alpha(opacity=70); -moz-opacity:0.7; opacity:0.7; }
 
@@ -117,7 +113,7 @@ i { font-size: 16px; }
 .information { width: 100%; }
 .info_content p { line-height: 22px; margin-bottom: 20px; overflow: hidden; }
 .info_content p em { margin: 0 5px; }
-.info_content ul li { list-style: none; overflow: hidden; position: relative; }
+.info_content ul li { list-style: none; overflow: hidden; position: relative; padding-bottom: 20px }
 .info_content ul li h3 { font-size: 12px; color: #333; line-height: 25px; }
 .info_content ul li:hover h3 { color: #109d59; }
 .info_content ul li h3 i { float: left; margin-right: 10px;  }
@@ -131,7 +127,7 @@ i { font-size: 16px; }
 
 .info_timeline ul li { list-style: none; position: relative; overflow: hidden; padding-bottom: 20px; }
 .info_timeline ul li .dot { width: 2px; height: 100%; position: absolute; left: 4px; top: 0; background-color: #666; }
-.info_timeline ul li .dot b { border-radius: 100%; -webkit-border-radius: 100%; -moz-border-radius: 100%; width: 10px; height: 10px; position: absolute; left: -6px; top: 4px; background-color: #333; border: 2px #fff solid; }
+.info_timeline ul li .dot b { border-radius: 100%; -webkit-border-radius: 100%; -moz-border-radius: 100%; width: 10px; height: 10px; position: absolute; left: -4px; top: 4px; background-color: #333; border: 2px #fff solid; }
 .info_timeline ul li.top .dot { top: 10px; }
 .info_timeline ul li.top .dot b { top: -6px; }
 .info_timeline ul li.bottom .dot { height: 10px; }
@@ -157,8 +153,8 @@ i { font-size: 16px; }
 .footer a { color: #fff; }
 
 /* tip */
-.tip_avatar_bg { width: 20px; height: 20px; background-color: #d73e2a; position: fixed; top: 50%; left: 50%; z-index: 99; filter:alpha(opacity=0); -moz-opacity:0; opacity:0; display: none; }
-.tip_avatar { width: 100%; height: 100%; position: fixed; left: 0; top: 0; z-index: 100; display: none; filter:alpha(opacity=0); -moz-opacity:0; opacity:0; overflow-x: hidden; background-color: #d73e2a; }
+.tip_avatar_bg { width: 20px; height: 20px; background-color: #ffffff; position: fixed; top: 50%; left: 50%; z-index: 99; filter:alpha(opacity=0); -moz-opacity:0; opacity:0; display: none; }
+.tip_avatar { width: 100%; height: 100%; position: fixed; left: 0; top: 0; z-index: 100; display: none; filter:alpha(opacity=0); -moz-opacity:0; opacity:0; overflow-x: hidden; background-color: #FFFFFF; }
 .tip_close { position: absolute; right: 20px; top: 20px; font-size: 48px; color: #fff; z-index: 101; }
 .tip_avatar_con { width: 100%; height: 100%; }
 .tip_avatar_con .desc { width: 100%; position: absolute; bottom: 0; height: 30px; line-height: 30px; text-align: center; color: #a22f1e; }
